// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleMap: render should return base GoogleMap container 1`] = `
<div
  className="ui-google-map"
  style={
    Object {
      "height": "400px",
      "width": "400px",
    }
  }
/>
`;

exports[`GoogleMap: render should return base GoogleMap container with custom size 1`] = `
<div
  className="ui-google-map"
  style={
    Object {
      "height": "150px",
      "width": "250px",
    }
  }
/>
`;
